salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/OSFPE_obj_Precio_PPA__c.object-meta.xml
<CustomObject>
    <label>Precio PPA</label>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>Nombre de Registro de Precio PPA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Precios PPA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>