salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/fields/OSFPE_fld_Contrato_Enlazado__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Contrato_Enlazado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato Enlazado</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Precios PPA</relationshipLabel>
    <relationshipName>Precios_PPA</relationshipName>
    <type>Lookup</type>
</CustomField>