salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/fields/OSFPE_fld_Dias_de_precio__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Dias_de_precio__c</fullName>
    <formula>OSFPE_fld_Fin_de_plazo_de_precio__c - OSFPE_fld_Inicio_de_plazo_de_precio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días de Precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>