salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/fields/OSFPE_fld_Fin_de_plazo_de_precio__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Fin_de_plazo_de_precio__c</fullName>
    <label>Fin de Plazo de Precio</label>
    <type>Date</type>
</CustomField>