salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/fields/OSFPE_fld_Oferta_enlazada__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Oferta_enlazada__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Oferta Enlazada</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Precios PPA</relationshipLabel>
    <relationshipName>Precios_PPA</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>