salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/fields/OSFPE_fld_Oportunidad_enlazada__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Oportunidad_enlazada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad Enlazada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Precios PPA</relationshipLabel>
    <relationshipName>Precios_PPA</relationshipName>
    <type>Lookup</type>
</CustomField>