salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/fields/OSFPE_fld_Precio_de_energia_HP__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Precio_de_energia_HP__c</fullName>
    <label>Precio de Energía HP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>