salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/fields/OSFPE_fld_Precio_monomico__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Precio_monomico__c</fullName>
    <formula>(( OSFPE_fld_Precio_de_potencia__c /0.73)/0.85)+ OSFPE_fld_Precio_de_energia_HP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio monómico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>