salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/recordTypes/OSFPE_rt_Precio_PPA_Peru.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Precio_PPA_Peru</fullName>
    <active>true</active>
    <label>Precio PPA Peru</label>
</RecordType>