salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/validationRules/OSFPE_vr_Valida_precios.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFPE_vr_Valida_precios</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISBLANK(OSFPE_fld_Precio_de_potencia__c ) ,
 ISBLANK(OSFPE_fld_Precio_de_energia_HP__c ) ,
 ISBLANK(OSFPE_fld_Precio_de_energia_HFP__c ) 
)</errorConditionFormula>
    <errorMessage>Debe ingresar por lo menos un precio</errorMessage>
</ValidationRule>