salesforce_sfdx/main/default/objects/OSFPE_obj_Precio_PPA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OSFPE_fld_Oferta_enlazada__c</columns>
    <columns>OSFPE_fld_Precio_de_potencia__c</columns>
    <columns>OSFPE_fld_Precio_de_energia_HP__c</columns>
    <columns>OSFPE_fld_Precio_de_energia_HFP__c</columns>
    <columns>OSFPE_fld_Inicio_de_plazo_de_precio__c</columns>
    <columns>OSFPE_fld_Fin_de_plazo_de_precio__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>